improve search
Took 11 minutes